refactor: Padronizando response para Modules
